# Image-Classification

./: .dockerignore  .gitignore  Dockerfile  README.md  app.py  config.yaml  constraints.txt  docker-compose.yml  model.pth  pyproject.toml  requirements-ci.txt  requirements.txt
.github/workflows/: ci.yml  cicd.yml
configs/: config.yaml  eval.yaml  infer.yaml  train.yaml
notebooks/: 3_MLOps.ipynb  Classification-Pretrained.ipynb  EDA.ipynb
src/: app.py  config.py  config_loader.py  data.py  engine.py  eval.py  infer.py  model.py  styles.py  train.py  utils.py
src/food101/: app.py  eval.py  infer.py  styles.py  train.py  utils.py
src/food101.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
src/notebook/: eda_utils.py  mlops_utils.py  models_utils.py
tests/: README.md  conftest.py  pytest.ini  test_cli_parse_only.py  test_config_and_imports.py  test_data_contract.py  test_data_runtime.py  test_infer_api_contract.py  test_infer_runtime.py  test_metrics_correctness.py  test_project_smoke.py  test_train_happy_path.py
